# emlb

./: .gitignore  CMakeLists.txt  README.md  multi_process.py  requirements.txt  run_event_denoisor.py
include/: edn.hpp
models/: 2xMSEO1H20_linear_7.onnx  2xMSEO1H20_linear_7.pt  convert.py
options/: dataset_info.yaml  options.py
scripts/: __init__.py  denoisors.py
scripts/src/: BackgroundActivityFilter.cpp  DoubleWindowFilter.cpp  EventDenoiseConvNetwork.cpp  EventFlowFIlter.cpp  KhodamoradiNoise.cpp  MultiLayerPerceptronFilter.cpp  NearestNeighbor.cpp  TimeSurface.cpp  YangNoise.cpp  edn.cpp
scripts/utils/: edn_utils.py  event_utils.py  file_utils.py
toolkit/: visualization.py
